@@ -3,6 +3,14 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 07.08.2019 20:01:30 +0100 - build 5446
+
+1. 0003729: Preserve encryption of system files after editing.
+
+2. Same for copying.
+
+3. Removed some copy-pasted code.
+
 drkns 07.08.2019 00:44:00 +0100 - build 5445
 
 1. Hex-viewer in UTF-16 mode shows hex as everywhere else - as bytes.
