@@ -1,0 +1,49 @@
+﻿#ifndef FILE_IO_HPP_7EE3BD41_F689_48BE_8484_7AEC93EC9B65
+#define FILE_IO_HPP_7EE3BD41_F689_48BE_8484_7AEC93EC9B65
+#pragma once
+
+/*
+file_io.hpp
+
+*/
+/*
+Copyright © 2019 Far Group
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions
+are met:
+1. Redistributions of source code must retain the above copyright
+   notice, this list of conditions and the following disclaimer.
+2. Redistributions in binary form must reproduce the above copyright
+   notice, this list of conditions and the following disclaimer in the
+   documentation and/or other materials provided with the distribution.
+3. The name of the authors may not be used to endorse or promote products
+   derived from this software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+*/
+
+// Internal:
+
+// Platform:
+
+// Common:
+#include "common/function_ref.hpp"
+
+// External:
+
+//----------------------------------------------------------------------------
+
+void save_file_with_replace(string const& FileName, DWORD& FileAttributes, DWORD ExtraAttributes, bool CreateBackup, function_ref<void(std::ostream& Stream)> Handler);
+
+#endif // FILE_IO_HPP_7EE3BD41_F689_48BE_8484_7AEC93EC9B65
