@@ -1,3 +1,11 @@
+drkns 07.08.2019 20:01:30 +0100 - build 5446
+
+1. 0003729: Зашифрованный файл (+S+E) в папке (-E) сохраняется редактором как незашифрованный
+
+2. То же самое в копировании.
+
+3. Убрано немного копипасты.
+
 drkns 07.08.2019 00:44:00 +0100 - build 5445
 
 1. Hex-viewer в режиме UTF-16 показывает hex как везде - байтами.
